--- a/WEB/index.html
+++ b/WEB/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <!--font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/   E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--google-font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -296,7 +296,19 @@
         </div>
     </footer>
 
+    <table>
+        <thead>
+            <tr>
+                <th>product id</th>
+                <th>product name</th>
+                <th>product category</th>
+            </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+    </table>
     <script src="../app.js"></script>
+ 
+
 </body>
 
 </html>
