--- a/WEB/index.html
+++ b/WEB/index.html
@@ -32,9 +32,9 @@
                 </div>
 
                 <div class="hed-rigth">
-                    <i class="fa-regular fa-user"></i>
-                    <i class="fa-solid fa-bag-shopping"></i>
-                    <i class="fa-solid fa-bars"></i>
+                   <a href="#"><i class="fa-regular fa-user"></i></a> 
+                   <a href="#"><i class="fa-solid fa-bag-shopping"></i></a> 
+                   <a href="#"><i class="fa-solid fa-bars"></i></a> 
                 </div>
             </div>
         </div>
