--- a/WEB/index.html
+++ b/WEB/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <!--font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/   E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--google-font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,9 +32,9 @@
                 </div>
 
                 <div class="hed-rigth">
-                   <a href="#"><i class="fa-regular fa-user"></i></a> 
-                   <a href="#"><i class="fa-solid fa-bag-shopping"></i></a> 
-                   <a href="#"><i class="fa-solid fa-bars"></i></a> 
+                    <i class="fa-regular fa-user"></i>
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
         </div>
@@ -64,14 +64,14 @@
                         <span>$29.00</span>
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <img src="../imgs/Rectangle 1 (1).png" alt="girl">
                     <div class="card-content">
                         <h4>Plain White Shirt</h4>
                         <span>$29.00</span>
                     </div>
-                </div>
-                <div class="card">
+                </div> -->
+                <!-- <div class="card">
                     <img src="../imgs/Rectangle 1 (2).png" alt="girl">
                     <div class="card-content">
                         <h4>Plain White Shirt</h4>
@@ -112,7 +112,7 @@
                         <h4>Plain White Shirt</h4>
                         <span>$29.00</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -296,19 +296,7 @@
         </div>
     </footer>
 
-    <table>
-        <thead>
-            <tr>
-                <th>product id</th>
-                <th>product name</th>
-                <th>product category</th>
-            </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-    </table>
     <script src="../app.js"></script>
- 
-
 </body>
 
 </html>
