eCommerce (API, pop-up)

--- a/WEB/about.html
+++ b/WEB/about.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="header">
                 <div class="hed-left">
-                    <p>NorthStar</p>
+                    <a href="http://127.0.0.1:5500/WEB/index.html#">NorthStar</a>
                 </div>
 
                 <div class="hed-midle">
@@ -52,14 +52,14 @@
                 <div class="card-One">
                     <img src="../imgs/WOMAN.png" alt="WOMAN">
                     <div class="co-context">
-                        <p>buy now</p>
+                        <a href="http://127.0.0.1:5500/WEB/card-Info.html">buy ndow</a>
                     </div>
                 </div>
 
                 <div class="card-One">
                     <img src="../imgs/MAN.png" alt="MAN">
                     <div class="co-context">
-                        <p>buy now</p>
+                        <a href="http://127.0.0.1:5500/WEB/card-info-two.html">buy now</a>
                     </div>
                 </div>
             </div>
