Ecommerce(pop-up)

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="discover-cards" id="product">
-
+                <!--mneim serverim doldurur burani-->
             </div>
         </div>
 
@@ -239,22 +239,22 @@
         </div>
     </footer>
 
-    <div class="productModal">
+    <div class="productModal" id="ProductModal">
         <div class="container">
             <div class="modal-box">
 
                 <div class="modal-rigth">
-                    <img src="../imgs/Rectangle1.png" alt="product">
+                    <img src="../imgs/Rectangle1.png" alt="product" id="productImage">
                 </div>
                 <div class="modal-left">
                     <div class="card-about">
                         <div class="modal-delete">
-                            <i class="material-icons">
+                            <i class="material-icons" id="closeModal">
                                 clear
                             </i>
                         </div>
 
-                        <h2>Plain White Shirt</h2>
+                        <h2 id="productDescription">Plain White Shirt</h2>
                         <div class="card-star">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
