eCommerce(add to card)

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -283,7 +283,7 @@
                         </div>
 
                         <div class="add-cart">
-                            <span>ADD TO CART</span>
+                            <span id="addToCartButton">ADD TO CART</span>
                             <P>Category: Women, Polo, Casual
                                 Tags: Modern, Design, cotton
                             </P>
